fixing issues in xal.tools